Mon Sep 13 13:53:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Benchmark/Interceptor_Type.cpp:
          Added missing include

Mon Sep 13 13:38:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/bzip2/Bzip2Compressor.mpc:
        * tao/Compression/lzo/LzoCompressor.mpc:
        * tao/Compression/zlib/ZlibCompressor.mpc:
        * tao/FlResource/FlResource.mpc:
        * tao/FoxResource/FoxResource.mpc:
        * tao/QtResource/QtResource.mpc:
        * tao/TkResource/TkResource.mpc:
          Moved these mpc files to their own directory

        * tao/Bzip2Compressor.mpc:
        * tao/FlResource.mpc:
        * tao/FoxResource.mpc:
        * tao/LzoCompressor.mpc:
        * tao/QtResource.mpc:
        * tao/TkResource.mpc:
        * tao/ZlibCompressor.mpc:
          Removed these files.

Mon Sep 13 13:29:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/PP_Memory_Management.txt:
        * tao/PP_Memory_Management.txt:
          Moved to docs

        * configure.ac:
          Removed these files.

Mon Sep 13 13:26:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Added removal of Makefile.am files

        * PROBLEM-REPORT-FORM:
          Zapped question for configure

        * tao/Utils.mpc:
        * tao/Utils/TAO_Utils.pc.in:
        * tao/TAO_Utils.pc.in:
          Moved in file to Utils

        * tao/XtResource/XtResource.mpc:
        * tao/XtResource.mpc:
          Moved to XtResource

Mon Sep 13 09:27:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH_AMI/inner_i.cpp:
        * examples/Advanced/ch_12/icp.h:
        * examples/Advanced/ch_18/icp.h:
        * examples/Advanced/ch_21/icp.h:
        * examples/Advanced/ch_8_and_10/icp.h:
        * examples/CSD_Strategy/ThreadPool/Foo_i.cpp:
        * examples/CSD_Strategy/ThreadPool2/FooServantList.cpp: