@@ -19,6 +19,7 @@
 // ============================================================================
 
 #include "WUCS4_UTF16.h"
+#include "ace/OS_Memory.h"
 
 // ****************************************************************
 
